# sindhu

./: CMakeLists.txt
include/: AST.h  DOM.h  Interpreter.h  Lexer.h  Parser.h  Runtime.h  Token.h
sindhu-demo/: code.hu  index.html  sindhuhu  sindhuhu.js  sindhuhu.wasm
src/: AST.cpp  DOM.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Runtime.cpp  Token.cpp  main.cpp
taha/: CHANGELOG.md  README.md  package.json
taha/syntaxes/: javascript.tmLanguage.json
